flux/manifests/04-apps/artificial-intelligence/prime-agent/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prime-agent
  labels:
    images/dockerhub: "true"
